# def_type

./: CMakeLists.txt  FEEDBACK.md  ONEOF.md  ONEOF_BUILD.md  ONEOF_TESTS.md  POLYMORPHIC_TOOLS_PROPOSAL.md  README.md  VARIANT_PROPOSAL.md  xmake.lua
.github/workflows/: main_branch.yml
cmake/: def-type-config.cmake.in
docs/: ONEOF_FINDINGS.md
lib/def_type/: xmake.lua
lib/def_type/include/: def_type.hpp
lib/def_type/src/: def_type.cppm  field.cppm  field_json.cpp  field_json.cppm  field_reflect.cppm  meta.cppm  type_def.cppm
lib/def_type/tests/: test_create.cpp  test_dynamic_nesting.cpp  test_field.cpp  test_field_json.cpp  test_field_level_metas.cpp  test_field_query.cpp  test_field_type_def.cpp  test_field_type_def_json.cpp  test_for_each.cpp  test_from_json.cpp  test_from_toml.cpp  test_from_yaml.cpp  test_has_field.cpp  test_hybrid_json.cpp  test_invalid_map_keys.cpp  test_json_types.hpp  test_meta.cpp  test_meta_queries.cpp  test_model_types.hpp  test_oneof.cpp  test_oneof_top_level_json.cpp  test_parse_complex_types.cpp  test_schema_queries.cpp  test_set_get.cpp  test_struct_validation.cpp  test_to_json.cpp  test_to_toml.cpp  test_to_yaml.cpp  test_toml_comments.cpp  test_toml_complex.cpp  test_type_schema.cpp  test_unknown.cpp  test_validation.cpp  test_yaml_complex.cpp
lib/type_def/: xmake.lua
lib/type_def/src/: collab.core.cppm  field.cppm  field_json.cpp  field_json.cppm  field_reflect.cppm  meta.cppm  type_def.cppm
lib/type_def/tests/: test_dynamic_nesting.cpp  test_field.cpp  test_field_json.cpp  test_field_level_metas.cpp  test_meta.cpp  (+10 more)
scratch/oneof_repro/: claim1_mixed_pack.cpp  claim2_string_lit_nttp.cpp  claim3_interleaved.cpp  labels_unique.cpp  nttp_repeat.cpp  v1_empty_alt.cpp  v2_t_member.cpp  v3_t_base.cpp  v4_foo_inherits_alt_tag.cpp  v5_foo_inherits_carrier.cpp  v6_non_template_inherits_carrier.cpp  v7_template_type_param.cpp  v8_direct_base.cpp  v9_typename_pack_adl.cpp
smoke/: CMakeLists.txt  tests.cpp  vcpkg-configuration.json  vcpkg.json  xmake.lua
xmake/: collab.lua
(+28 files in other folders)
